ninth, overflow bawah dan kanan got fixed

--- a/style.css
+++ b/style.css
@@ -1,9 +1,22 @@
 /* Set the colour and the position of the background and the elements */
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
+html {
+  margin: 0;
+  padding: 0;
+  /* height: 100%; */
+  /* height: fit-content; */
+
+}
+
 body {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
+  /* width: 100vh; */
   background-color: #fae1dd;
   margin: 0;
 }
@@ -228,11 +241,7 @@ body {
 }
 
 
-.secret {
-  background-color: #d62828;
-  height: 100px;  
-  width: 100px;  
-}
+
 
 @keyframes fadeIn {
   from {
@@ -255,6 +264,9 @@ body {
     background-color: #f8d1e0;
   height: 100%;
   width: 100%;
+
+  overflow: hidden;
+  
 }
 
 
